--- a/Level_2/one.html
+++ b/Level_2/one.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="three.css">
+  <link rel="stylesheet" href="one.css">
   <title>Python Code Challenge</title>
 </head>
 <body>
@@ -11,19 +11,20 @@
     <h1>Python Code Challenge</h1>
     <p>Rearrange the given code in correct order</p>
   </header>
-  <div class="ans hide"><br>
+  <div class="ans hide">
+    <br>
     <p class="para">Answer is shown</p><br>
     <button class="into">x</button>
   </div>
   <div class="container" id="container">
-    <h4 id="question">3.Write a Python program to find the area of a square:</h4>
+    <h4 id="question">1.Write a Python program to display multiplication table :</h4>
     <div class="code-container" id="code-container"></div>
-    <a href="two.html"><button>< -</button></a>
+    <a href="/Level_1/five.html"><button id="eas">Easy</button></a>
     <button id="checkButton">Check</button>
     <button id="answerButton">Show</button>
     <button id="resetButton">Reset</button>
-    <a href="four.html"><button>- ></button></a>
+    <a href="two.html"><button>- ></button></a>
   </div>
-  <script src="three.js"></script>
+  <script src="one.js"></script>
 </body>
 </html>
