--- a/Level_2/three.html
+++ b/Level_2/three.html
@@ -16,7 +16,7 @@
     <button class="into">x</button>
   </div>
   <div class="container" id="container">
-    <h4 id="question">3.Write a Python program to find the area of a square:</h4>
+    <h4 id="question">3.Write a Python Program to display calendar of the given month and year :</h4>
     <div class="code-container" id="code-container"></div>
     <a href="two.html"><button>< -</button></a>
     <button id="checkButton">Check</button>
