--- a/five.html
+++ b/five.html
@@ -16,12 +16,13 @@
     <button class="into">x</button>
   </div>
   <div class="container" id="container">
-    <h4 id="question">5.Write a Python program to find the sum of natural numbers up to a given number:</h4>
+    <h4 id="question">5.Write a Python program to find the area of a rectangle:</h4>
     <div class="code-container" id="code-container"></div>
     <a href="four.html"><button>< -</button></a>
     <button id="checkButton">Check</button>
     <button id="answerButton">Show</button>
     <button id="resetButton">Reset</button>
+    <a href="/Level_1/Level_2/one.html"><button id="med">Medium</button></a>
   </div>
   <script src="five.js"></script>
 </body>
