--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="page0.css">
 </head>
 <body>
-    <div>
-        <h1>JUMBLE MASTER</h1>
+    <div class="container">
+        <h1 class="jum">JUMBLE MASTER</h1>
         <H3>Are you ready for fun and educational experience !</H3>
     </div>
     <h2>Then click below button</h2>
-    <a href="one.html"><button>Next</button></a><br>
+    <a href="/Level_1/levels.html"><button>Next</button></a><br>
     <div class="hi">
         <img src="py.png" alt="pic">
+        <div class="note">
+            <p><u>NOTE</u> : - To rearrange the code lines , hold , drag , and drop them into the correct place. </p>
+        </div>
     </div>
 </body>
 </html>
