--- a/one.html
+++ b/one.html
@@ -19,9 +19,9 @@
   <div class="container" id="container">
     <h4 id="question">1.Write a Python program to add two numbers:</h4>
     <div class="code-container" id="code-container"></div>
-    <a href="index.html"><button>< -</button></a>
+    <a href="index.html"><button class="home">Home</button></a>
     <button id="checkButton">Check</button>
-    <button id="answerButton">Show Answer</button>
+    <button id="answerButton">Show</button>
     <button id="resetButton">Reset</button>
     <a href="two.html"><button>- ></button></a>
   </div>
