--- a/Level_2/two.html
+++ b/Level_2/two.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="three.css">
+  <link rel="stylesheet" href="two.css">
   <title>Python Code Challenge</title>
 </head>
 <body>
@@ -16,14 +16,14 @@
     <button class="into">x</button>
   </div>
   <div class="container" id="container">
-    <h4 id="question">3.Write a Python program to find the area of a square:</h4>
+    <h4 id="question">2.Write a Python program to find the largest number among three numbers :</h4>
     <div class="code-container" id="code-container"></div>
-    <a href="two.html"><button>< -</button></a>
+    <a href="one.html"><button>< -</button></a>
     <button id="checkButton">Check</button>
     <button id="answerButton">Show</button>
     <button id="resetButton">Reset</button>
-    <a href="four.html"><button>- ></button></a>
+    <a href="three.html"><button>- ></button></a>
   </div>
-  <script src="three.js"></script>
+  <script src="two.js"></script>
 </body>
 </html>
